styles/styles.css
/* ===== YOUR CSS GOES HERE ===== */
/* ===== START BY IMPORTING YOUR FONTS ===== */ 
@import url('https://fonts.googleapis.com/css2?family=Antic+Slab&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Neucha&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Special+Gothic+Expanded+One&family=Tenor+Sans&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap');
/* ===== NEXT WRITE GLOBAL STYLES, THEN USE MEDIA QUERIES FOR LAYOUT/STYLE ADJUSTMENTS ===== */
/* ===== STARTER CSS BELOW FOR body AND p IS JUST AN EXAMPLE... YOU MAY DELETE IT ===== */


body {
    background: #FFFFE8;
    margin: 0;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}


h1 {
    font-family: "Neucha", cursive;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
    font-size: 3rem;
    display: flex;
    justify-content: center;
}

h2 {
    font-family: "Neucha", cursive;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    font-size: 2rem;
    display: flex;
    justify-content: center;
}

h3 {
    font-size: 2em;
    font-family: "Neucha", cursive;
    font-weight: 400;
    font-style: normal;
    padding-right: 20%;
    padding-left: 20%;
}

h3 a {
  font-size: 2rem;
  font-family: "Neucha", cursive;
  font-weight: 400;
  font-style: normal;
  text-decoration: none;
  color: black;
  border-bottom: 5px solid #B2CB21;
}

h3 a:hover {
  background-color: #B2CB21;
  padding-top: 2%;
}


p {
    font-size: 1.4em;
    line-height: 1.2em;
    font-family: "Neucha", cursive;
    font-weight: 400;
    font-style: normal;
    display: flex;
    justify-content: center;
}


/* MAP */





/* INDIVIDUAL LOCATIONS */

#church {
    position: absolute;
    width: 100%;
    cursor: pointer;
    rotate: -5deg;
    
}

#camp-residence {
    position: absolute;
    width: 50%;
    cursor: pointer;
    rotate: -4deg;
}

#big-cave {
    position: absolute;
    width: 40%;
    cursor: pointer; 
    rotate: -5deg;
}

#small-cave {
    position: absolute;
    width: 23%;
    cursor: pointer;
    rotate: 4deg;
}


/* INDIVIDUAL LOCATIONS - HOVER & ACTIVE */

/*.location {
    position: absolute;
    transform: translate(-50%, -50%);
    transition: transform 0.2s ease, filter 0.2s ease;
} 

@keyframes dance {
  0% {transform: translate(-50%, -52%) rotate(-2deg) scale(1.3);}
  40% {transform: translate(-50%, -48%) rotate(5deg) scale(1.3);}
  100% {transform: translate(-50%, -52%) rotate(-4deg) scale(1.3);}
}


.location:hover {
  animation: dance 0.6s infinite ease-in-out;
  transform: translate(-50%, -50%) scale(1.3);
  filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.2));
}

animation: dance 0.6s infinite ease-in-out;

*/

.location {
  position: absolute;
  transition: transform 0.2s ease, filter 0.2s ease
}

.location:hover {
  filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.2));
}


/* POPUP */

#popup {
    position: fixed;
    top: 30%;
    left: 50%; 
    transform: translateX(-50%); 
    background: #D1FFF7; 
    padding: 20px;
    margin: 20px;
    max-width: 300px; 
    border: 5px solid #B2CB21;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
    z-index: 999;
    border-radius: 10%;
}

.hidden {
    display: none;
}


#close-btn {
    position: absolute;
    top: 1px;
    right: 10px;
    background: none;
    border: none;
    font-size: 3rem;
    color: #B2CB21;
    cursor: pointer;
    transition: color 0.2s ease;
  }
  
  #close-btn:hover {
    color: #000;
  }


/* VIDEO - SUBMERGED */


.video h2 {
    padding-top: 10px;
}

.video {
    flex-direction: column;
    border: 4px solid #B2CB21;
    border-radius: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 70%; 
    aspect-ratio: 16/9;
}

.video video {
    box-shadow: none;
    width: 70&;
    height: 70%;
    display: block;
    object-fit: cover;
    padding-bottom: 20px;
    margin-bottom: 20px;
}

/* MAP BUTTONS */

#map-controls {
  font-family: "Neucha", cursive;
  font-optical-sizing: auto;
  font-weight: 800;
  font-style: normal;
  max-width: fit-content;
  font-size: 2.1rem;
  text-decoration: none;
  color: #000;
  border: 4px solid #B2CB21;
  border-radius: 10px;
  margin-right: 5%;
  margin-top: 1.5%;
  padding: 2px 20px;
  background-color: #D1FFF7;
  position: absolute;
  top: 2%;
  left: 69%;
}


/* MAP SVG STYLING */

#map-container {
  overflow: hidden;
  width: 65rem;
  height: 40rem;
  position: relative; 
  overflow: hidden;
  padding-bottom: 0;
  border: 5px solid #B2CB21;
  border-radius: 10px;
  background-color: #dde89d;
}

#map-svg {
  margin: auto;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  margin: 0;
  padding: 0;
  width: auto;
  height: auto;
}



/*
#map-container {
  width: 90%;
  padding-top: 56.25%;
  position: relative; 
  overflow: hidden;
  padding-bottom: 0;



#map-illustration {
  width: 1080px;
  height:  620px;
}

#map-illustration {
  display: block;
}

svg {
  position: absolute;
  top: 0;
  left: 15%;
  right: 20%;
  width: 70%;
  height: 80%;
  display: block;
  border: 5px solid #B2CB21;
  border-radius: 10px;
  background-color: #dde89d;
}


*/



/* 
width: 1080px;
height: 620px;
*/

.cls-1, .cls-2, .cls-3, .cls-4, .cls-5, .cls-6, .cls-7, .cls-8, .cls-9, .cls-10, .cls-11, .cls-12, .cls-13 {
  stroke-miterlimit: 10;
}

.cls-1, .cls-2, .cls-3, .cls-4, .cls-5, .cls-6, .cls-10 {
  stroke-width: 3px;
}

.cls-1, .cls-6 {
  stroke: #818181;
}

.cls-1, .cls-10 {
  fill: #b4b4b4;
}

.cls-14, .cls-15, .cls-13 {
  fill: #fefce9;
}

.cls-2 {
  fill: #79b1e0;
  stroke: #79b1e0;
}

.cls-3 {
  fill: #dae3a4;
}

.cls-3, .cls-11, .cls-12, .cls-13 {
  stroke: #b1ca35;
}

.cls-15 {
  font-size: 28.79px;
}

.cls-15, .cls-16, .cls-17, .cls-18, .cls-19, .cls-20, .cls-21, .cls-22, .cls-23, .cls-24, .cls-25, .cls-26 {
  font-family: Neucha, Neucha;
}

.cls-27, .cls-11 {
  fill: #75ba5b;
}

.cls-28 {
  fill: #b1ca35;
}

.cls-4, .cls-5, .cls-6, .cls-7, .cls-9 {
  fill: #ccc;
}

.cls-4, .cls-10 {
  stroke: #989898;
}

.cls-16 {
  font-size: 18.8px;
}

.cls-16, .cls-17, .cls-18, .cls-19, .cls-20, .cls-21, .cls-22, .cls-23, .cls-24, .cls-25, .cls-26 {
  fill: #010101;
}

.cls-17 {
  font-size: 18.8px;
}

.cls-18 {
  font-size: 17.61px;
}

.cls-19 {
  font-size: 17.42px;
}

.cls-20 {
  font-size: 17.5px;
}

.cls-21 {
  font-size: 16.81px;
}

.cls-22 {
  font-size: 22.5px;
}

.cls-23 {
  font-size: 22.65px;
}

.cls-24 {
  font-size: 21.3px;
}

.cls-25 {
  font-size: 25.07px;
}

.cls-26 {
  font-size: 33.42px;
}

.cls-29 {
  fill: #e4c16b;
}

.cls-5 {
  stroke: #b4b4b4;
}

.cls-30 {
  fill: #bfcc93;
}

.cls-7 {
  stroke: #b8baba;
}

.cls-7, .cls-9 {
  stroke-width: 2px;
}

.cls-8 {
  fill: #edd59d;
  stroke: #e4c16b;
}

.cls-8, .cls-11, .cls-12 {
  stroke-width: 4px;
}

.cls-9 {
  stroke: #ccc;
}

.cls-31 {
  fill: #ebbf5c;
}

.cls-32, .cls-12 {
  fill: #84b966;
}

.cls-13 {
  stroke-width: 9px;
}


/* MAP - INTERACTION (EXPERIMENT) */




/*

#city-plane {
    cursor: pointer;
    transition: stroke 0.4s ease, stroke-width 0.4s ease; 
}

#city-plane:hover {
    stroke: #b2cb21;
    stroke-width: 5;
    filter: drop-shadow(0 0 8px #b2cb21);
}

#street {
    cursor: pointer;
    transition: stroke 0.4s ease, stroke-width 0.4s ease; 
}

#street:hover {
    stroke: #ccc;
    stroke-width: 5;
    filter: drop-shadow(0 0 8px #ccc);
}



*/



#river {
    cursor: pointer; 
    transition: stroke 0.4s ease, stroke-width 0.4s ease; 
}

#river:hover {
    stroke: #4fc3f7;
    stroke-width: 5;
    filter: drop-shadow(0 0 8px #4fc3f7);

}

/* MAP RIVER EXPERIMENT */

#p5-river {
    position: absolute; 
    top: 250px;
    left: 0;
    width: 100%;
    height: 300px;
    pointer-events: none;
    z-index: 1;
}



/* LINKS */


.about {
    width: 100%;
}


.about-link {
    font-family: "Neucha", cursive;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
    max-width: fit-content;
    font-size: 2.1rem;
    text-decoration: none;
    color: #000;
    border: 4px solid #B2CB21;
    border-radius: 10px;
    margin-right: 5%;
    margin-top: 1.5%;
    padding: 2px 20px;
    background-color: #D1FFF7;
    float: right;

}

.about-link:hover {
    background-color: #b2cb21;
    border: 4px solid #D1FFF7;
}



.project-introduction p {
    display: block;
    padding-right: 20%;
    padding-left: 20%;
    line-height: 160%;
}

.project-introduction a {
    text-decoration: none;
    border-bottom: 3px solid #B2CB21;
    color: black;
    font-weight: 900;
    padding: 2px;
}

.project-introduction a:hover {
    background-color: #B2CB21;
    padding-top: 0.6%;

}

 
/* MEDIA QUERIES */

@media screen and (max-width: 1200px) {

  #map-container {
    width: 800px;
    height:  500px;
  }
  
}


@media screen and (max-width: 950px) {

  #map-container {
    width: 400px;
    height:  300px;
  }
  
}

